# dev-anikait

./: .gitignore  README.md  failed_questions.txt  generated_questions.json  pyproject.toml  sql_planning_output.json
Bank_churn/: Bank_churn_prediction.ipynb  predictions.csv
Demand_Forecasting/: Demand_Forecasting.ipynb  kaggle_dataset_link.txt
JSON Outputs Planner/: Q1.json  Q10.json  Q100.JSON  Q1000.json  Q1001.json  Q1002.json  Q1003.json  Q1004.json  Q1005.json  Q1006.json  Q1007.json  Q1008.json  Q1009.json  Q101.JSON  Q1010.json  Q1011.json  Q1012.json  Q1013.json  Q1014.json  Q1015.json  Q1016.json  Q1017.json  Q1018.json  Q1019.json  Q102.JSON  Q1020.json  Q1021.json  Q1022.json  Q1023.json  Q1024.json  Q1025.json  Q1026.json  Q1027.json  Q1028.json  Q1029.json  Q103.JSON  Q1030.json  Q1032.json  Q1033.json  Q1034.json  (+4930 more)
Product_sold_or_not/: kaggle_dataset_link.txt
Todo_FastAPI/: main.py
ai_toolkit/: .gitignore  main.py  requirements.txt
question_plans/: Q1.json  Q10.json  Q1000.json  Q1001.json  Q1002.json  Q1003.json  Q1004.json  Q1005.json  Q1006.json  Q1007.json  Q1008.json  Q101.json  Q1010.json  Q1011.json  Q1012.json  Q1013.json  Q1014.json  Q1015.json  Q1016.json  Q1017.json  Q1019.json  Q1020.json  Q1021.json  Q1022.json  Q1023.json  Q1024.json  Q1026.json  Q1027.json  Q1028.json  Q1029.json  Q103.json  Q1032.json  Q1034.json  Q1035.json  Q1036.json  Q1037.json  Q1038.json  Q1039.json  Q1040.json  Q1041.json  (+5289 more)
raw_outputs/: Q10_raw.json  Q11_raw.json  Q12_raw.json  Q13_raw.json  Q14_raw.json  Q15_raw.json  Q16_raw.json  Q17_raw.json  (+22 more)
(+5444 files in other folders)
